--- a/component.yaml
+++ b/component.yaml
@@ -1,4 +1,4 @@
-platform: Common
+platform: iOS
 buildPlatform:
 displayName: Appdome-Build-2Secure for iOS
 description: "Integration that allows activating security and app protection features, building and signing mobile apps using Appdome's API."
