--- a/component.yaml
+++ b/component.yaml
@@ -6,8 +6,8 @@ inputs:
 - key: "AC_APPDOME_IPA_PATH"
   defaultValue: "$AC_APPDOME_IPA_PATH"
   isRequired: true
-  title: App file URL or environment variable
-  description: "URL to app file (ipa) or an environment variable representing its path (i.e. $AC_EXPORT_DIR/<myappname>.ipa)."
+  title: App File Path
+  description: "URL to app file (ipa) or an environment variable representing its path (i.e. `$AC_EXPORT_DIR/<myappname>.ipa`)."
   helpText:
 - key: "AC_APPDOME_API_KEY"
   defaultValue: "$AC_APPDOME_API_KEY"
@@ -32,40 +32,32 @@ inputs:
   isRequired: true
   editorType: select
   title: Signing Method
-  description: "App signing method."
+  description: "Signing method for automatically sign applications using the Appdome service in accordance with Apple's guidelines."
   options: "On-Appdome,Private-Signing,Auto-Dev-Signing"
   helpText:
-- key: "AC_IOS_ENTITLEMENTS"
-  defaultValue: "$AC_IOS_ENTITLEMENTS"
-  isRequired: true
+- key: "AC_APPDOME_IOS_ENTITLEMENTS"
+  defaultValue: "$AC_APPDOME_IOS_ENTITLEMENTS"
+  isRequired: false
   title: iOS Entitlement File Paths
-  description: "Entitlements must be taken from the Xcode. You can separate entitlement files with commas."
+  description: "Entitlements must be taken from the Xcode. You can separate entitlement files with commas. It must have `plist`, `txt` or `xml` file extension."
   helpText:
 - key: "AC_APPDOME_PROVISIONING_PROFILES"
-  defaultValue: "$AC_PROVISIONING_PROFILES"
+  defaultValue: "$AC_APPDOME_PROVISIONING_PROFILES"
   isRequired: true
   title: Appdome Provisioning Profiles
-  description: "Paths of the provisioning profiles. You can separate files with commas."
+  description: "Paths of the provisioning profiles. You can separate files with commas. It must have `mobileprovision` extension."
   helpText:
 - key: "AC_APPDOME_CERTIFICATES"
-  defaultValue: "$AC_CERTIFICATES"
+  defaultValue: "$AC_APPDOME_CERTIFICATES"
   isRequired: true
   title: iOS Certificate File Path
-  description: "Paths of the certificate file."
+  description: "Paths of the certificate file. It must have `p12` extension."
   helpText:
 - key: "AC_APPDOME_CERTIFICATES_PASS"
   defaultValue: "$AC_APPDOME_CERTIFICATES_PASS"
   isRequired: false
   title: iOS Certificate Password
   description: "iOS Certificate Password."
-  helpText:
-- key: "AC_APPDOME_BUILD_LOGS"
-  defaultValue: "false"
-  isRequired: true
-  editorType: select
-  title: Build with Logs?
-  description: "Build with diagnostic logs?"
-  options: "true,false"
   helpText:
 outputs:
 - key: "AC_APPDOME_SECURED_IPA_PATH"
